--- a/views/client-index.ejs
+++ b/views/client-index.ejs
@@ -8,14 +8,14 @@
       />
     </div>
     <div class="content" data-aos="fade-up">
-      <h3>Most Tasty Burger For You</h3>
+      <h3>Burger ngon nhất dành cho bạn</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
         explicabo eius inventore reprehenderit alias eos facilis, ipsa est
         asperiores repellendus!
       </p>
       <a href="/all" class="btn btn-block btn-warning btn-lg text-white"
-        ><h2 class="text-white">Explore now</h2></a
+        ><h2 class="text-white">Khám phá ngay</h2></a
       >
     </div>
   </section>
@@ -25,7 +25,7 @@
   <section class="packages" id="foods">
     <a href="/foods" title="Click fore more foods"
       ><h1 class="heading text-warning font-weight-bold">
-        Our <span>Foods</span>
+        <span>Thức ăn</span>
       </h1></a
     >
     <div class="box-container">
@@ -45,7 +45,7 @@
                   <a
                     onclick="submitf('<%= food._id %>')"
                     class="btn btn-block btn-warning btn-lg text-white"
-                    ><h4>Add to cart</h4></a
+                    ><h4>Thêm vào giỏ hàng</h4></a
                   >
                 </form>
               </div>
@@ -62,7 +62,7 @@
   <section class="packages" id="drinks">
     <a href="/drinks" title="Click fore more drinks"
       ><h1 class="heading text-warning font-weight-bold">
-        Our <span>Drinks</span>
+        <span>THỨC UỐNG</span>
       </h1></a
     >
     <div class="box-container">
@@ -82,7 +82,7 @@
                   <a
                     onclick="submitd('<%= drink._id %>')"
                     class="btn btn-block btn-warning btn-lg text-white"
-                    ><h4>Add to cart</h4></a
+                    ><h4>Thêm vào giỏ hàng</h4></a
                   >
                 </form>
               </div>
