--- a/views/client-product.ejs
+++ b/views/client-product.ejs
@@ -33,7 +33,7 @@
         </div>
         <div class="row">
           <div class="col-12 h3 pb-5" style="white-space: pre-line">
-            <h2>Description:</h2>
+            <h2>Mô tả:</h2>
             <%= data.description %>
           </div>
         </div>
@@ -45,8 +45,7 @@
                 type="submit"
               >
                 <strong class="h3"
-                  ><span class="fa-sharp fa-solid fa-cart-shopping"></span> Add
-                  to cart</strong
+                  ><span class="fa-sharp fa-solid fa-cart-shopping"></span> Thêm vào giỏ hàng</strong
                 >
               </button>
             </form>
