--- a/views/client-search-product.ejs
+++ b/views/client-search-product.ejs
@@ -17,7 +17,7 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-                OUR <strong><span class="text-warning">data</span></strong>
+                <strong><span class="text-warning">TẤT CẢ THỨC ĂN VÀ THỨC UỐNG</span></strong>
               </h1>
             </div>
           </div>
@@ -44,10 +44,10 @@
                 <div class="col-6 border-left mt-1">
                   <h2><%= acdata.name %></h2>
                   <div class="mt-1 mb-1 spec-1">
-                    <h3>Type: <%= acdata.type %></h3>
+                    <h3>Loại: <%= acdata.type %></h3>
                   </div>
                   <p class="text-justify h3 para mb-0 text-truncate">
-                    Description: <%= acdata.description%>
+                    Mô tả: <%= acdata.description%>
                   </p>
                 </div>
                 <div
@@ -69,7 +69,7 @@
                         class="btn btn-outline-danger btn-lg mt-2"
                         type="submit"
                       >
-                        <h4>Add to cart</h4>
+                        <h4>Thêm vào giỏ hàng</h4>
                       </button>
                     </form>
                   </div>
@@ -90,7 +90,7 @@
           href="/client"
           type="submit"
           class="btn btn-primary text d-flex justify-content-center"
-          ><h3>Go to homepage</h3></a
+          ><h3>Về trang chủ</h3></a
         >
       </div>
       <div class="col-md-2">
@@ -98,7 +98,7 @@
           href="/cart"
           type="submit"
           class="btn btn-primary text d-flex justify-content-center"
-          ><h3>Go to cart</h3></a
+          ><h3>Tới giỏ hàng</h3></a
         >
       </div>
     </div>
