--- a/views/client-cart.ejs
+++ b/views/client-cart.ejs
@@ -32,10 +32,10 @@
               <div class="col-md-6 border-left mt-1">
                 <h1><%= product.name %></h1>
                 <div class="mt-1 mb-1 spec-1">
-                  <h4>Type: <%= product.type %></h4>
+                  <h4>Loại: <%= product.type %></h4>
                 </div>
                 <p class="text-justify para mb-0 text-truncate h3">
-                  Description: <%= product.description %>
+                  Mô tả: <%= product.description %>
                 </p>
               </div>
               <div
@@ -80,7 +80,7 @@
                     class="btn btn-outline-danger btn-md mt-2"
                     type="submit"
                   >
-                    <h3>Remove</h3>
+                    <h3>Xóa</h3>
                   </a>
                 </div>
               </div>
@@ -97,7 +97,7 @@
       <div class="col-7 pt-5 pb-5 bg-warning text-white">
         <div class="row">
           <div class="col-8" id="total">
-            <h2>Total: <%= total %> VND</h2>
+            <h2>Tổng cộng: <%= total %> VND</h2>
           </div>
         </div>
       </div>
@@ -108,12 +108,12 @@
         <div class="row justify-content-center">
           <div class="col-4 text-right">
             <a class="btn btn-danger" href="/client"
-              ><h3>Continute to Shopping!!</h3></a
+              ><h3>Tiếp tục mua sắm!!</h3></a
             >
           </div>
           <div class="col-4 text-left">
             <a class="btn btn-primary" href="/create-invoice/<%= cart._id %>"
-              ><h3>Make the invoice</h3></a
+              ><h3>Thanh toán</h3></a
             >
           </div>
         </div>
