--- a/views/client-drinks.ejs
+++ b/views/client-drinks.ejs
@@ -17,7 +17,7 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-                OUR <strong><span class="text-warning">DRINKS</span></strong>
+                <strong><span class="text-warning">ĐỒ UỐNG</span></strong>
               </h1>
             </div>
           </div>
@@ -51,9 +51,9 @@
                 </div>
                 <div class="col-6 border-left mt-1">
                   <h2><%= drink.name %></h2>
-                  <div class="mt-1 mb-1 spec-1"><h3>Type: <%= drink.type %></h3></div>
+                  <div class="mt-1 mb-1 spec-1"><h3>Loại: <%= drink.type %></h3></div>
                   <p class="text-justify h3 para mb-0 text-truncate">
-                    Description: <%= drink.description%>
+                    Mô tả: <%= drink.description%>
                   </p>
                 </div>
                 <div class="align-items-center align-content-center col-md-3 border-left mt-1">
@@ -70,7 +70,7 @@
                       class="d-flex flex-column"
                     >
                       <button class="btn btn-outline-danger btn-lg mt-2" type="submit">
-                        <h4>Add to cart</h4>
+                        <h4>Thêm vào giỏ hàng</h4>
                       </button>
                     </form>
                   </div>
@@ -88,12 +88,12 @@
     <div class="row d-flex justify-content-center pt-5 pb-5">
       <div class="col-md-2">
         <a href="/client" type="submit" class="btn btn-primary text d-flex justify-content-center"
-          ><h3>Go to homepage</h3></a
+          ><h3>Về trang chủ</h3></a
         >
       </div>
       <div class="col-md-2">
         <a href="/cart" type="submit" class="btn btn-primary text d-flex justify-content-center"
-          ><h3>Go to cart</h3></a
+          ><h3>Tới giỏ hàng</h3></a
         >
       </div>
     </div>
