--- a/views/client-foods.ejs
+++ b/views/client-foods.ejs
@@ -17,7 +17,7 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-                Đồ <strong><span class="text-warning">ăn</span></strong>
+                <strong><span class="text-warning">THỨC ĂN</span></strong>
               </h1>
             </div>
           </div>
