--- a/views/client-invoice.ejs
+++ b/views/client-invoice.ejs
@@ -54,7 +54,7 @@
         >
           <div class="row p-4 m-4">
             <div class="col-md-12 h1 justify-content-center">
-              <label for="client">Client name: <%= client.name %></label>
+              <label for="client">Tên khách hàng: <%= client.name %></label>
               <input
                 class="text-center"
                 type="hidden"
@@ -65,7 +65,7 @@
               />
             </div>
             <div class="col-md-12 h1">
-              <label for="address">Address: </label>
+              <label for="address">Địa chỉ: </label>
               <input
                 type="text"
                 name="address"
@@ -74,7 +74,7 @@
               />
             </div>
             <div class="col-md-12 h1">
-              <label for="tel">Phone number: </label>
+              <label for="tel">Số điện thoại: </label>
               <input type="tel" name="tel" id="tel" value="<%= client.tel %>" />
             </div>
           </div>
@@ -87,9 +87,9 @@
             <table class="table table-striped table-bordered border-primary">
               <tr>
                 <th style="width: 10%"><h2>STT</h2></th>
-                <th style="width: 40%"><h2>Name</h2></th>
-                <th style="width: 30%"><h2>Price</h2></th>
-                <th style="width: 20%"><h2>Quantity</h2></th>
+                <th style="width: 40%"><h2>Tên</h2></th>
+                <th style="width: 30%"><h2>Giá</h2></th>
+                <th style="width: 20%"><h2>Số lượng</h2></th>
               </tr>
               <% if (productList != '') { %> <%
               productList.forEach(function(product, index){ %>
@@ -155,12 +155,12 @@
           <div class="row justify-content-center">
             <div class="col-4 text-right">
               <a class="btn btn-danger" href="/client"
-                ><h3>Continute to Shopping!!</h3></a
+                ><h3>Tiếp tục mua sắm!!</h3></a
               >
             </div>
             <div class="col-4 text-left">
               <button class="btn btn-primary" type="submit">
-                <h3>Make a payment</h3>
+                <h3>Thanh toán</h3>
               </button>
             </div>
           </div>
