--- a/views/client-index.ejs
+++ b/views/client-index.ejs
@@ -8,7 +8,7 @@
       />
     </div>
     <div class="content" data-aos="fade-up">
-      <h3>Burger ngon nhất dành cho bạn</h3>
+      <h3>Burger ngon nhất cho bạn</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
         explicabo eius inventore reprehenderit alias eos facilis, ipsa est
@@ -25,7 +25,7 @@
   <section class="packages" id="foods">
     <a href="/foods" title="Click fore more foods"
       ><h1 class="heading text-warning font-weight-bold">
-        <span>Thức ăn</span>
+        <span>THỨC ĂN</span>
       </h1></a
     >
     <div class="box-container">
