--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,14 +8,14 @@
       />
     </div>
     <div class="content" data-aos="fade-up">
-      <h3>Most Tasty Burger For You</h3>
+      <h3>Burger ngon nhất cho bạn</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
         explicabo eius inventore reprehenderit alias eos facilis, ipsa est
         asperiores repellendus!
       </p>
       <a href="/must-login" class="btn btn-block btn-warning btn-lg text-white"
-        ><h2 class="text-white">Explore now</h2></a
+        ><h2 class="text-white">Khám phá ngay</h2></a
       >
     </div>
   </section>
@@ -25,7 +25,7 @@
   <section class="packages" id="foods">
     <a href="/foods" title="Click fore more foods"
       ><h1 class="heading text-warning font-weight-bold">
-        Our <span>Foods</span>
+        <span>THỨC ĂN</span>
       </h1></a
     >
     <div class="box-container">
@@ -44,7 +44,7 @@
                 <a
                   href="/must-login"
                   class="btn btn-block btn-warning btn-lg text-white"
-                  ><h4>Order now</h4></a
+                  ><h4>Đặt ngay</h4></a
                 >
               </div>
             </div>
@@ -60,7 +60,7 @@
   <section class="packages" id="drinks">
     <a href="/drinks" title="Click fore more drinks"
       ><h1 class="heading text-warning font-weight-bold">
-        Our <span>Drinks</span>
+        <span>THỨC UỐNG</span>
       </h1></a
     >
     <div class="box-container">
@@ -77,7 +77,7 @@
                 <div class="price"><%= drink.price %></div>
                 <p><%= drink.description %></p>
                 <a href="#" class="btn btn-block btn-warning btn-lg text-white"
-                  ><h4>Order now</h4></a
+                  ><h4>Đặt ngay</h4></a
                 >
               </div>
             </div>
