--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,8 +22,8 @@
               <h3><%= infoErrorsObj %></h3>
             </div>
             <% } %>
-            <h1>Hello! let's get started</h1>
-            <h3 class="font-weight-light">Sign in to continue.</h3>
+            <h1>Xin chào! Bắt đầu ngay</h1>
+            <h3 class="font-weight-light">Đăng nhập để tiếp tục.</h3>
             <form class="pt-3" action="/login" method="POST">
               <div class="row g-3">
                 <div class="col-12">
@@ -41,7 +41,7 @@
 
                 <div class="col-12">
                   <label for="password" class="form-label"
-                    ><H3>Password</H3></label
+                    ><H3>Mật khẩu</H3></label
                   >
                   <input
                     style="font-size: 16px"
@@ -57,18 +57,18 @@
                     type="submit"
                     class="btn btn-block btn-warning btn-lg auth-form-btn text-white"
                   >
-                    <h2>Login</h2>
+                    <h2>Đăng nhập</h2>
                   </button>
                 </div>
               </div>
             </form>
             <div class="text-center mt-4 font-weight-bold">
-              <h5><a href="#" class="text-primary">Forgot password?</a></h5>
+              <h5><a href="#" class="text-primary">Quên mật khẩu?</a></h5>
             </div>
             <div class="text-center mt-4 font-weight-light">
               <h2>
-                Don't have an account?
-                <a href="/register" class="text-primary">Create</a>
+                Bạn chưa có tài khoản?
+                <a href="/register" class="text-primary">Tạo ngay</a>
               </h2>
             </div>
           </div>
