--- a/views/must-login.ejs
+++ b/views/must-login.ejs
@@ -10,10 +10,10 @@
         <div class="col-12 pt-5 pb-5">
           <div class="row justify-content-center">
             <div class="col-6 text-right">
-              <a class="btn btn-danger" href="/"><h3>Go To Home Page?</h3></a>
+              <a class="btn btn-danger" href="/"><h3>Về trang chủ?</h3></a>
             </div>
             <div class="col-6 text-left">
-              <a class="btn btn-primary" href="/login"><h3>Login Now!!!</h3></a>
+              <a class="btn btn-primary" href="/login"><h3>Đăng nhập ngay!!!</h3></a>
             </div>
           </div>
         </div>
