--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,8 +15,8 @@
               <h3><%= infoErrorsObj %></h3>
             </div>
             <% } %>
-            <h1>New here?</h1>
-            <h3 class="font-weight-light">Signing up is easy. It only takes a few steps!!!</h3>
+            <h1>Bắt đầu ngay?</h1>
+            <h3 class="font-weight-light">Đăng ký thật dễ dàng chỉ với vài bước!!!</h3>
             <hr />
             <form class="pt-3" action="/register" method="POST">
               <div class="row g-3">
@@ -33,7 +33,7 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="password" class="form-label"><H3>Password</H3></label>
+                  <label for="password" class="form-label"><H3>Mật khẩu</H3></label>
                   <input
                     style="font-size: 16px"
                     type="password"
@@ -44,7 +44,7 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="confirmPassword" class="form-label"><H3>Confirm Password</H3></label>
+                  <label for="confirmPassword" class="form-label"><H3>Xác nhận mật khẩu</H3></label>
                   <input
                     style="font-size: 16px"
                     type="password"
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="col-12">
-                  <label for="name" class="form-label"><H3>Name</H3></label>
+                  <label for="name" class="form-label"><H3>Tên</H3></label>
                   <input
                     style="font-size: 16px"
                     type="text"
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="col-12">
-                  <label for="gender" class="form-label"><H3>Gender</H3></label>
+                  <label for="gender" class="form-label"><H3>Giới tính</H3></label>
                   <br />
                   <input
                     style="font-size: 16px"
@@ -78,7 +78,7 @@
                     value="male"
                     class="form-label"
                   />
-                  <label for="male"><h3>Male</h3></label><br />
+                  <label for="male"><h3>Nam</h3></label><br />
                   <input
                     style="font-size: 16px"
                     type="radio"
@@ -87,11 +87,11 @@
                     value="female"
                     class="form-label"
                   />
-                  <label for="css"><h3>Female</h3></label><br />
+                  <label for="css"><h3>Nữ</h3></label><br />
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="address" class="form-label"><H3>Address</H3></label>
+                  <label for="address" class="form-label"><H3>Địa chỉ</H3></label>
                   <input
                     style="font-size: 16px"
                     type="text"
@@ -102,7 +102,7 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="tel" class="form-label"><H3>Phone number</H3></label>
+                  <label for="tel" class="form-label"><H3>Số điện thoại</H3></label>
                   <input
                     style="font-size: 16px"
                     type="tel"
@@ -117,12 +117,12 @@
                     type="submit"
                     class="btn btn-block btn-warning btn-lg auth-form-btn text-white"
                   >
-                    <h2>Register</h2>
+                    <h2>Đăng ký</h2>
                   </button>
                 </div>
               </div>
               <div class="text-center mt-4 font-weight-bold">
-                <h3>Already have an account? <a href="/login" class="text-primary">Login</a></h3>
+                <h3>Đã có tài khoản? <a href="/login" class="text-primary">Đăng nhập</a></h3>
               </div>
             </form>
           </div>
