--- a/views/product.ejs
+++ b/views/product.ejs
@@ -33,7 +33,7 @@
         </div>
         <div class="row">
           <div class="col-12 h3 pb-5" style="white-space: pre-line">
-            <h2>Description:</h2>
+            <h2>Mô tả:</h2>
             <%= data.description %>
           </div>
         </div>
@@ -44,7 +44,7 @@
               class="btn btn-block btn-warning btn-md text-white m-0"
             >
               <strong class="h3"
-                ><span class="fas fa-utensils"></span> Buy now</strong
+                ><span class="fas fa-utensils"></span> Mua sắm ngay</strong
               >
             </a>
           </div>
