change invocie input fild

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,9 @@
               <div class="content">
                 <div class="price"><%= drink.price %></div>
                 <p><%= drink.description %></p>
-                <a href="#" class="btn btn-block btn-warning btn-lg text-white"
+                <a
+                  href="/must-login"
+                  class="btn btn-block btn-warning btn-lg text-white"
                   ><h4>Đặt ngay</h4></a
                 >
               </div>
