--- a/views/client-invoice.ejs
+++ b/views/client-invoice.ejs
@@ -71,20 +71,48 @@
                 name="address"
                 id="address"
                 value="<%= client.address %>"
+                style="
+                  width: 100%;
+                  background-color: rgb(248, 235, 218);
+                  border-radius: 5px;
+                  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+                "
+                autofocus
               />
             </div>
             <div class="col-md-12 h1">
               <label for="tel">Số điện thoại: </label>
-              <input type="tel" name="tel" id="tel" value="<%= client.tel %>" />
+              <input
+                type="tel"
+                name="tel"
+                id="tel"
+                value="<%= client.tel %>"
+                style="
+                  width: 100%;
+                  background-color: rgb(248, 235, 218);
+                  border-radius: 5px;
+                  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+                "
+              />
             </div>
           </div>
         </div>
         <div class="col-7">
           <div
             class="card mt-4 p-4"
-            style="background-color: rgb(248, 246, 218); border-radius: 10px"
+            style="
+              background-color: rgb(248, 235, 218);
+              border-radius: 10px;
+              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+            "
           >
-            <table class="table table-striped table-bordered border-primary">
+            <table
+              class="table table-striped table-bordered border-primary"
+              style="
+                box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+                border-radius: 10px;
+              "
+            >
               <tr>
                 <th style="width: 10%"><h2>STT</h2></th>
                 <th style="width: 40%"><h2>Tên</h2></th>
@@ -118,7 +146,11 @@
               rows="4"
               type="text"
               placeholder="Ghi chú:"
-              style="font-size: large"
+              style="
+                font-size: large;
+                border-radius: 10px;
+                box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+              "
             ></textarea>
           </div>
         </div>
@@ -126,10 +158,11 @@
 
       <div class="row justify-content-center mt-4 p-4">
         <div
-          class="col-7 pt-5 pb-5 bg-warning text-white"
+          class="col-7 pt-5 pb-5"
           style="
             box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-            border-radius: 20px;
+            border-radius: 10px;
+            background-color: rgb(248, 235, 218);
           "
         >
           <div class="row">
