--- a/views/client-drinks.ejs
+++ b/views/client-drinks.ejs
@@ -17,7 +17,7 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-                <strong><span class="text-warning">ĐỒ UỐNG</span></strong>
+                <strong><span class="text-warning">THỨC UỐNG</span></strong>
               </h1>
             </div>
           </div>
