--- a/views/client-all-product.ejs
+++ b/views/client-all-product.ejs
@@ -17,7 +17,7 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-                <strong><span class="text-warning">TẤT CẢ THỨC ĂN & ĐỒ UỐNG</span></strong>
+                <strong><span class="text-warning">TẤT CẢ THỨC ĂN & THỨC UỐNG</span></strong>
               </h1>
             </div>
           </div>
