--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
       />
     </div>
     <div class="content" data-aos="fade-up">
-      <h3>Burger ngon nhất cho bạn</h3>
+      <h3>Thực đơn ngon nhất cho bạn</h3>
       <p>
-        Thưởng thức hương vị burger ngon nhất cùng nhiều món ăn ngon mang hương vị từ khắp nơi trên thế giới. Thao tác gọn, giao hàng nhanh, cùng khám phá ngay!
+        TMang đến cho bạn nhiều món ăn ngon với mang hương vị từ khắp nơi trên thế giới. Thao tác gọn, giao hàng nhanh, cùng khám phá ngay!
       </p>
       <a href="/must-login" class="btn btn-block btn-warning btn-lg text-white"
         ><h2 class="text-white">Khám phá ngay</h2></a
