--- a/views/client-index.ejs
+++ b/views/client-index.ejs
@@ -8,11 +8,11 @@
       />
     </div>
     <div class="content" data-aos="fade-up">
-      <h3>Burger ngon nhất cho bạn</h3>
+      <h3>BThực đơn ngon nhất cho bạn</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-        explicabo eius inventore reprehenderit alias eos facilis, ipsa est
-        asperiores repellendus!
+        Tự tin luôn mang đến cho bạn nhiều món ăn ngon với mang hương vị từ khắp nơi trên thế giới, 
+        có mặt trên khắp 35 tỉnh thành giúp bữa ăn đơn giản hơn.
+        Thao tác gọn, giao hàng nhanh, cùng khám phá ngay!
       </p>
       <a href="/all" class="btn btn-block btn-warning btn-lg text-white"
         ><h2 class="text-white">Khám phá ngay</h2></a
