--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
     <div class="content" data-aos="fade-up">
       <h3>Thực đơn ngon nhất cho bạn</h3>
       <p>
-        TMang đến cho bạn nhiều món ăn ngon với mang hương vị từ khắp nơi trên thế giới. Thao tác gọn, giao hàng nhanh, cùng khám phá ngay!
+        Tự tin luôn mang đến cho bạn nhiều món ăn ngon với mang hương vị từ khắp nơi trên thế giới, 
+        có mặt trên khắp 35 tỉnh thành giúp bữa ăn đơn giản hơn.
+        Thao tác gọn, giao hàng nhanh, cùng khám phá ngay!
       </p>
       <a href="/must-login" class="btn btn-block btn-warning btn-lg text-white"
         ><h2 class="text-white">Khám phá ngay</h2></a
