--- a/views/client-index.ejs
+++ b/views/client-index.ejs
@@ -8,7 +8,7 @@
       />
     </div>
     <div class="content" data-aos="fade-up">
-      <h3>BThực đơn ngon nhất cho bạn</h3>
+      <h3>Thực đơn ngon nhất cho bạn</h3>
       <p>
         Tự tin luôn mang đến cho bạn nhiều món ăn ngon với mang hương vị từ khắp nơi trên thế giới, 
         có mặt trên khắp 35 tỉnh thành giúp bữa ăn đơn giản hơn.
