--- a/views/client-view-invoice.ejs
+++ b/views/client-view-invoice.ejs
@@ -13,10 +13,7 @@
 
   <div class="container-fluid justify-content-center d-flex">
     <div class="col-7 p-4">
-      <div
-        class="card mt-2"
-        style="background-color: rgb(248, 246, 218); border-radius: 10px"
-      >
+      <div class="card mt-2" style="border-radius: 5px; box-shadow: none">
         <div class="card-body">
           <div class="row">
             <div class="col-md-6 text-center">
@@ -85,19 +82,13 @@
           <a
             class="btn btn-warning text-white"
             href="/client"
-            style="
-              border-radius: 20px;
-              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-            "
+            style="border-radius: 20px"
             ><h5>Mua sắm ngay bây giờ??</h5></a
           >
         </div>
         <div class="col-4 text-center">
           <a
-            style="
-              border-radius: 20px;
-              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-            "
+            style="border-radius: 20px"
             class="btn btn-danger"
             href="/cancel/<%= invoice._id %>"
             ><h5>Hủy đơn hàng : (</h5></a
@@ -110,10 +101,7 @@
           <a
             class="btn btn-warning text-white"
             href="/client"
-            style="
-              border-radius: 20px;
-              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-            "
+            style="border-radius: 20px"
             ><h5>Mua sắm ngay bây giờ??</h5></a
           >
         </div>
