--- a/views/client-cart.ejs
+++ b/views/client-cart.ejs
@@ -13,10 +13,14 @@
 
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-7">
+      <div class="col-7" style="box-shadow: none">
         <div
           class="card mt-4"
-          style="background-color: rgb(255, 250, 197); border-radius: 10px"
+          style="
+            background-color: rgb(255, 250, 197);
+            border-radius: 10px;
+            box-shadow: none;
+          "
         >
           <% if (productList != '') { %> <%
           productList.forEach(function(product, index){ %>
@@ -94,7 +98,10 @@
     </div>
 
     <div class="row justify-content-center mt-4">
-      <div class="col-7 pt-5 pb-5 bg-warning text-white">
+      <div
+        class="col-7 p-5 m-5 bg-warning text-white"
+        style="border-radius: 10px"
+      >
         <div class="row">
           <div class="col-8" id="total">
             <h2>Tổng cộng: <%= total %> VND</h2>
