--- a/views/client-invoice.ejs
+++ b/views/client-invoice.ejs
@@ -45,14 +45,16 @@
       </div>
       <div class="row justify-content-center">
         <div
-          class="col-7"
-          style="
-            background-color: rgb(248, 246, 218);
-            border-radius: 20px;
-            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-          "
+          class="col-8"
+          style="background-color: rgb(248, 246, 218); border-radius: 5px"
         >
-          <div class="row p-4 m-4">
+          <div
+            class="row p-4 m-4 bg-white"
+            style="
+              border-radius: 5px;
+              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+            "
+          >
             <div class="col-md-12 h1 justify-content-center">
               <label for="client">Tên khách hàng: <%= client.name %></label>
               <input
@@ -75,7 +77,6 @@
                   width: 100%;
                   background-color: rgb(248, 235, 218);
                   border-radius: 5px;
-                  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
                 "
                 autofocus
               />
@@ -91,7 +92,6 @@
                   width: 100%;
                   background-color: rgb(248, 235, 218);
                   border-radius: 5px;
-                  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
                 "
               />
             </div>
@@ -102,15 +102,15 @@
             class="card mt-4 p-4"
             style="
               background-color: rgb(248, 235, 218);
-              border-radius: 10px;
-              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+              border-radius: 5px;
+              box-shadow: none;
             "
           >
             <table
               class="table table-striped table-bordered border-primary"
               style="
                 box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-                border-radius: 10px;
+                border-radius: 5px;
               "
             >
               <tr>
@@ -136,7 +136,11 @@
         <div class="col-7">
           <div
             class="card mt-4 p-4"
-            style="background-color: rgb(248, 246, 218); border-radius: 10px"
+            style="
+              background-color: rgb(248, 246, 218);
+              border-radius: 5px;
+              box-shadow: none;
+            "
           >
             <textarea
               name="note"
@@ -148,7 +152,7 @@
               placeholder="Ghi chú:"
               style="
                 font-size: large;
-                border-radius: 10px;
+                border-radius: 5px;
                 box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
               "
             ></textarea>
@@ -156,16 +160,22 @@
         </div>
       </div>
 
-      <div class="row justify-content-center mt-4 p-4">
+      <div class="row justify-content-center p-4">
         <div
-          class="col-7 pt-5 pb-5"
+          class="col-7"
           style="
             box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
+            border-radius: 5px;
             background-color: rgb(248, 235, 218);
           "
         >
-          <div class="row">
+          <div
+            class="row p-3 m-4 bg-white"
+            style="
+              box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+              border-radius: 5px;
+            "
+          >
             <div class="col-12" id="total">
               <h2>Tổng cộng: <%= total %> VND</h2>
             </div>
