--- a/views/must-login.ejs
+++ b/views/must-login.ejs
@@ -1,19 +1,29 @@
-<div class="container-scroller bg-white" style="height: 60em">
+<div
+  class="container-scroller bg-white m-8 p-8"
+  style="height: 70em; background-image: url('/img/f-bg.png')"
+>
   <div
-    class="auth-form-light text-left py-5 px-4 px-sm-5"
-    style="margin: 15% 30% 10% 30%; background-color: #eee"
+    class="auth-form-light py-5 px-4 px-sm-5 d-flex justify-content-center"
+    style="margin-top: 15%; background: none"
   >
-    <div class="col-12 text-center mt-xl-2">
-      <h2 class="text-warning font-weight-bold">Chưa đăng nhập !</h2>
-      <h2 class="font-weight-light">Bạn phải đăng nhập để có thể mua sản phẩm</h2>
+    <div
+      class="col-5 text-center mt-xl-2 must-login"
+      style="background-color: #eee"
+    >
+      <h2 class="text-warning font-weight-bold mt-4 pt-4">Chưa đăng nhập !</h2>
+      <h2 class="font-weight-light">
+        Bạn phải đăng nhập để có thể mua sản phẩm
+      </h2>
       <div class="row justify-content-center">
         <div class="col-12 pt-5 pb-5">
-          <div class="row justify-content-center">
-            <div class="col-6 text-right">
+          <div class="row text-center">
+            <div class="col-md-6">
               <a class="btn btn-danger" href="/"><h3>Về trang chủ?</h3></a>
             </div>
-            <div class="col-6 text-left">
-              <a class="btn btn-primary" href="/login"><h3>Đăng nhập ngay!!!</h3></a>
+            <div class="col-md-6">
+              <a class="btn btn-primary" href="/login"
+                ><h3>Đăng nhập ngay!!!</h3></a
+              >
             </div>
           </div>
         </div>
