--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,22 +1,34 @@
 <div class="container-scroller" style="margin-top: 70px">
   <div class="container-fluid page-body-wrapper full-page-wrapper">
-    <div class="content-wrapper d-flex align-items-center auth px-0">
-      <div class="row w-100 mx-0">
+    <div
+      class="content-wrapper d-flex align-items-center auth px-0"
+      style="background-image: url('/img/f-bg.png')"
+    >
+      <div
+        class="row w-100 mx-0"
+        style="background-image: url('/img/f-bg.png')"
+      >
         <div class="col-lg-4 mx-auto">
           <div class="auth-form-light text-left py-5 px-4 px-sm-5">
             <% if (infoRegisterObj != '') { %>
             <div class="col-12 alert alert-success alert-dismissible">
-              <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+              <a href="#" class="close" data-dismiss="alert" aria-label="close"
+                >&times;</a
+              >
               <h3><%= infoRegisterObj %></h3>
             </div>
             <% } %> <% if (infoErrorsObj != '') { %>
             <div class="col-12 alert alert-danger alert-dismissible">
-              <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+              <a href="#" class="close" data-dismiss="alert" aria-label="close"
+                >&times;</a
+              >
               <h3><%= infoErrorsObj %></h3>
             </div>
             <% } %>
             <h1>Bắt đầu ngay?</h1>
-            <h3 class="font-weight-light">Đăng ký thật dễ dàng chỉ với vài bước!!!</h3>
+            <h3 class="font-weight-light">
+              Đăng ký thật dễ dàng chỉ với vài bước!!!
+            </h3>
             <hr />
             <form class="pt-3" action="/register" method="POST">
               <div class="row g-3">
@@ -33,7 +45,9 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="password" class="form-label"><H3>Mật khẩu</H3></label>
+                  <label for="password" class="form-label"
+                    ><H3>Mật khẩu</H3></label
+                  >
                   <input
                     style="font-size: 16px"
                     type="password"
@@ -44,7 +58,9 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="confirmPassword" class="form-label"><H3>Xác nhận mật khẩu</H3></label>
+                  <label for="confirmPassword" class="form-label"
+                    ><H3>Xác nhận mật khẩu</H3></label
+                  >
                   <input
                     style="font-size: 16px"
                     type="password"
@@ -68,7 +84,9 @@
                 </div>
 
                 <div class="col-12">
-                  <label for="gender" class="form-label"><H3>Giới tính</H3></label>
+                  <label for="gender" class="form-label"
+                    ><H3>Giới tính</H3></label
+                  >
                   <br />
                   <input
                     style="font-size: 16px"
@@ -91,7 +109,9 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="address" class="form-label"><H3>Địa chỉ</H3></label>
+                  <label for="address" class="form-label"
+                    ><H3>Địa chỉ</H3></label
+                  >
                   <input
                     style="font-size: 16px"
                     type="text"
@@ -102,7 +122,9 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="tel" class="form-label"><H3>Số điện thoại</H3></label>
+                  <label for="tel" class="form-label"
+                    ><H3>Số điện thoại</H3></label
+                  >
                   <input
                     style="font-size: 16px"
                     type="tel"
@@ -122,7 +144,10 @@
                 </div>
               </div>
               <div class="text-center mt-4 font-weight-bold">
-                <h3>Đã có tài khoản? <a href="/login" class="text-primary">Đăng nhập</a></h3>
+                <h3>
+                  Đã có tài khoản?
+                  <a href="/login" class="text-primary">Đăng nhập</a>
+                </h3>
               </div>
             </form>
           </div>
