chuyen sang tieng viet be

--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -79,7 +79,7 @@
                 class="col-md-7 p-4"
                 style="background-color: rgb(255, 237, 136)"
               >
-                <h3>Lịch sử hóa đơn</h3>
+                <h3>Lịch sử mua hàng</h3>
                 <table
                   class="table table-striped table-bordered border-primary"
                 >
